# nomain

./: .gitignore  README.md  README_CHIMERA.md  README_ORACLE_LOOP.md  cloud_deployment_setup.py  experimental_validation_protocols.py  experimental_validation_report.md  pyproject.toml  requirements.txt  run_agi.py  run_agi_taichi.py  run_chimera.py  test_chimera_integration.py  test_chimera_mathematical_formulations.py  test_oracle_loop.py  test_realtime.py
cloud_deployment/: README.md  deployment_summary.json  requirements-cloud.txt
cloud_deployment/docker/: .dockerignore  Dockerfile  docker-compose.yml
cloud_deployment/monitoring/: grafana-dashboard.json  prometheus.yml
cloud_deployment/scripts/: build.sh  cleanup.sh  deploy.sh  test.sh
configs/: README.md  chimera_default.yaml  chimera_t4.yaml  debug_l2_enhanced.yaml  debug_l2_runtime.yaml  language_enabled_realtime.yaml  mnist_deep_hierarchy.yaml  mnist_multi_pattern_0_vs_1.yaml  mnist_multi_pattern_performance.yaml  realtime_sensory_cortex.yaml
experiments/: 05_learn_mnist_digit.py  run_simulation.py
psinet/core/: neuron.py  synapse.py  taichi_synapse.py
psinet/io/: loaders.py  realtime_encoders.py
psinet/language/: __init__.py  input.py  output.py
psinet/modules/: __init__.py  language_module.py  motivation_system.py  sensory_cortex.py  world_model.py
psinet/network/: column.py  hierarchy.py
psinet/simulation/: simulator.py
psinet/taichi_backend/: __init__.py  converter.py  lif_sparse.py  stdp_sparse.py
tests/: test_language_engine.py  test_taichi_backend.py  test_taichi_t4.py
(+8 files in other folders)
